crates/oracledb/tests/trybuild/fail/unit.rs
use oracledb::FromRow;

#[derive(FromRow)]
struct Row;

fn main() {}
